--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@10.8.1",
   "dependencies": {
     "axios": "^1.8.4",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
